force-app/main/default/objects/Rent__c/fields/Inventory_Items__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Items__c</fullName>
    <description>Relação com cópias do filme</description>
    <label>Inventory Items</label>
    <referenceTo>Inventory_Items__c</referenceTo>
    <relationshipLabel>Rents</relationshipLabel>
    <relationshipName>Rents</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>