force-app/main/default/objects/Rent__c/fields/Location_Date__c.field-meta.xml
<CustomField>
    <fullName>Location_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Date</label>
    <type>Date</type>
</CustomField>