force-app/main/default/objects/Rent__c/fields/Location_Finished__c.field-meta.xml
<CustomField>
    <fullName>Location_Finished__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location Finished</label>
    <type>Checkbox</type>
</CustomField>