force-app/main/default/objects/Rent__c/fields/Location_Status__c.field-meta.xml
<CustomField>
    <fullName>Location_Status__c</fullName>
    <formula>IF(
    Close_Date__c &lt; TODAY() &amp;&amp; NOT(Location_Finished__c), &apos;Late&apos;,
    IF(Location_Finished__c, &apos;Finished&apos;, &apos;In Progress&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Status</label>
    <type>Text</type>
</CustomField>