force-app/main/default/objects/Rent__c/validationRules/apenas_itens_disponiveis.validationRule-meta.xml
<ValidationRule>
    <fullName>apenas_itens_disponiveis</fullName>
    <active>true</active>
    <description>Essa validação não permite aluguéis de itens indisponíveis</description>
    <errorConditionFormula>ISPICKVAL(Inventory_Items__r.Status__c, &quot;Rented&quot;)</errorConditionFormula>
    <errorMessage>Esse item já está alugado! Escolha outro ou faça uma reserva.</errorMessage>
</ValidationRule>