force-app/main/default/objects/Rent__c/validationRules/contact_inadimplente.validationRule-meta.xml
<ValidationRule>
    <fullName>contact_inadimplente</fullName>
    <active>true</active>
    <description>Não permite que usuário inadimplente faça aluguéis</description>
    <errorConditionFormula>ISPICKVAL(Contact__r.contact_status__c, &quot;Defaulting&quot;)</errorConditionFormula>
    <errorMessage>Um usuário inadimplente não pode alugar um filme! Por favor, regularize sua situação.</errorMessage>
</ValidationRule>